--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
   <header class="header">
-    <a href="" class="header-brand">Galleria</a>
+    <a href="#" class="header-brand">Galleria</a>
     <nav class="header-navbar">
       <ul>
         <li>
@@ -36,22 +36,22 @@
     <div class="header-social-media">
       <ul>
         <li>
-          <a href="#">
-            <i class="fab fa-facebook"></i>
+          <a href="https://fescarv.tech" target="_blank">
+            <i class="fa fa-portrait"></i>
           </a>
         </li>
         <li>
-          <a href="#">
+          <a href="https://github.com/fescarvalho" target="_blank">
             <i class="fab fa-github"></i>
           </a>
         </li>
         <li>
-          <a href="#">
+          <a href="https://www.instagram.com/fescarv/" target="_blank">
             <i class="fab fa-instagram"></i>
           </a>
         </li>
         <li>
-          <a href="#">
+          <a href="https://www.linkedin.com/in/fernando-carvalho-08427a193/" target="_blank">
             <i class="fab fa-linkedin"></i>
           </a>
         </li>
